[gd_scene load_steps=67 format=2]

[ext_resource path="res://GFX/Mario/Walk.png" type="Texture" id=1]
[ext_resource path="res://Scripts/General/MarioPhysics.gd" type="Script" id=2]
[ext_resource path="res://GFX/Mario/Jump.png" type="Texture" id=3]
[ext_resource path="res://Objects/Enemies/Core/BaseSounds.tscn" type="PackedScene" id=4]
[ext_resource path="res://GFX/Fonts/MFFont.fnt" type="BitmapFont" id=5]
[ext_resource path="res://GFX/Mario/Dead.png" type="Texture" id=6]
[ext_resource path="res://GFX/Mario/BigJump.png" type="Texture" id=7]
[ext_resource path="res://GFX/Mario/BigWalk.png" type="Texture" id=8]
[ext_resource path="res://GFX/Mario/BigCrouch.png" type="Texture" id=9]
[ext_resource path="res://GFX/Mario/BigAppear.png" type="Texture" id=10]
[ext_resource path="res://GFX/Mario/FlowerWalk.png" type="Texture" id=11]
[ext_resource path="res://GFX/Mario/FlowerAppear.png" type="Texture" id=12]
[ext_resource path="res://GFX/Mario/FlowerCrouch.png" type="Texture" id=13]
[ext_resource path="res://GFX/Mario/FlowerJump.png" type="Texture" id=14]
[ext_resource path="res://GFX/Mario/FlowerLaunch.png" type="Texture" id=15]
[ext_resource path="res://GFX/Mario/BeetrootCrouch.png" type="Texture" id=16]
[ext_resource path="res://GFX/Mario/BeetrootJump.png" type="Texture" id=17]
[ext_resource path="res://GFX/Mario/BeetrootWalk.png" type="Texture" id=18]
[ext_resource path="res://GFX/Mario/BeetrootAppear.png" type="Texture" id=19]
[ext_resource path="res://GFX/Mario/BeetrootLaunch.png" type="Texture" id=20]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 31, 57 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 10 )
region = Rect2( 62, 0, 31, 57 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 10 )
region = Rect2( 31, 0, 31, 57 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 60, 0, 30, 31 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 30, 31 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 30, 0, 30, 31 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Jumping",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Appearing",
"speed": 25.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "Stopped",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 4 ) ],
"loop": true,
"name": "Walking",
"speed": 1.0
} ]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 31, 57 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 10 )
region = Rect2( 31, 0, 31, 57 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 10 )
region = Rect2( 62, 0, 31, 57 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 8 )
region = Rect2( 62, 0, 31, 59 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 31, 59 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 8 )
region = Rect2( 31, 0, 31, 59 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 8 )
region = Rect2( 62, 0, 31, 59 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Jumping",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Appearing",
"speed": 25.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "Crouching",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "Stopped",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "Walking",
"speed": 1.0
} ]

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 34, 59 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 12 )
region = Rect2( 34, 0, 34, 59 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 12 )
region = Rect2( 68, 0, 34, 59 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 12 )
region = Rect2( 102, 0, 34, 59 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 11 )
region = Rect2( 62, 0, 31, 59 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 31, 59 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 11 )
region = Rect2( 31, 0, 31, 59 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 11 )
region = Rect2( 62, 0, 31, 59 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "Jumping",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "Appearing",
"speed": 25.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "Crouching",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "Launching",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ) ],
"loop": true,
"name": "Stopped",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "Walking",
"speed": 1.0
} ]

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 19 )
region = Rect2( 0, 0, 34, 62 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 19 )
region = Rect2( 34, 0, 34, 62 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 19 )
region = Rect2( 68, 0, 34, 62 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 19 )
region = Rect2( 102, 0, 34, 62 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 18 )
region = Rect2( 62, 0, 31, 62 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 31, 62 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 18 )
region = Rect2( 31, 0, 31, 62 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 18 )
region = Rect2( 62, 0, 31, 62 )

[sub_resource type="SpriteFrames" id=33]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "Jumping",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "Appearing",
"speed": 25.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "Crouching",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "Launching",
"speed": 5.0
}, {
"frames": [ SubResource( 29 ) ],
"loop": true,
"name": "Stopped",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "Walking",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=34]
extents = Vector2( 10, 14 )

[sub_resource type="RectangleShape2D" id=35]
extents = Vector2( 10, 27 )

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 10, 5 )

[sub_resource type="RectangleShape2D" id=37]
extents = Vector2( 7, 2 )

[sub_resource type="RectangleShape2D" id=38]
extents = Vector2( 7, 2 )

[sub_resource type="RectangleShape2D" id=39]
extents = Vector2( 7, 2 )

[sub_resource type="RectangleShape2D" id=40]
extents = Vector2( 2, 5 )

[sub_resource type="RectangleShape2D" id=41]
extents = Vector2( 2, 16 )

[sub_resource type="RectangleShape2D" id=42]
extents = Vector2( 2, 16 )

[sub_resource type="RectangleShape2D" id=43]
extents = Vector2( 1, 6 )

[sub_resource type="RectangleShape2D" id=44]
extents = Vector2( 1, 12 )

[sub_resource type="RectangleShape2D" id=45]
extents = Vector2( 1, 6 )

[sub_resource type="RectangleShape2D" id=46]
extents = Vector2( 1, 12 )

[node name="Mario" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 11000
limit_bottom = 480
smoothing_speed = 8.0
editor_draw_limits = true

[node name="DebugText" type="Label" parent="."]
margin_left = -24.0
margin_top = -91.0
margin_right = 70.0
margin_bottom = -69.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SmallMario" type="AnimatedSprite" parent="."]
z_index = 10
frames = SubResource( 7 )
animation = "Stopped"
playing = true
offset = Vector2( 0, -15 )

[node name="BigMario" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -13 )
z_index = 10
frames = SubResource( 15 )
animation = "Stopped"
playing = true
offset = Vector2( 0, -16 )

[node name="FlowerMario" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -29 )
z_index = 10
frames = SubResource( 24 )
animation = "Stopped"
playing = true

[node name="BeetrootMario" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -30 )
z_index = 10
frames = SubResource( 33 )
animation = "Stopped"
playing = true

[node name="PrimaryDetector" type="Area2D" parent="." groups=[
"Mario",
]]
visible = false
collision_layer = 3
collision_mask = 3

[node name="CollisionPrimary" type="CollisionShape2D" parent="PrimaryDetector"]
position = Vector2( 0, -13 )
shape = SubResource( 34 )

[node name="CollisionPrimaryBig" type="CollisionShape2D" parent="PrimaryDetector"]
position = Vector2( 0, -26 )
shape = SubResource( 35 )

[node name="InsideDetector" type="Area2D" parent="."]
visible = false
collision_layer = 3
collision_mask = 3

[node name="CollisionInside" type="CollisionShape2D" parent="InsideDetector"]
position = Vector2( 0, -9 )
shape = SubResource( 36 )

[node name="BottomDetector" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionBottom" type="CollisionShape2D" parent="BottomDetector"]
position = Vector2( 0, 12 )
shape = SubResource( 37 )

[node name="CollisionBottomClose" type="CollisionShape2D" parent="BottomDetector"]
position = Vector2( 0, 4 )
shape = SubResource( 38 )

[node name="TopDetector" type="Area2D" parent="."]
visible = false
collision_layer = 3
collision_mask = 3

[node name="CollisionTop" type="CollisionShape2D" parent="TopDetector"]
position = Vector2( 0, -37 )
shape = SubResource( 37 )

[node name="CollisionTopBig" type="CollisionShape2D" parent="TopDetector"]
position = Vector2( 0, -60 )
shape = SubResource( 39 )

[node name="RightDetector" type="Area2D" parent="."]
visible = false
collision_layer = 3
collision_mask = 3

[node name="CollisionRight" type="CollisionShape2D" parent="RightDetector"]
position = Vector2( 16, -11 )
shape = SubResource( 40 )

[node name="CollisionRightBig" type="CollisionShape2D" parent="RightDetector"]
position = Vector2( 16, -22 )
shape = SubResource( 41 )

[node name="LeftDetector" type="Area2D" parent="."]
visible = false
collision_layer = 3
collision_mask = 3

[node name="CollisionLeft" type="CollisionShape2D" parent="LeftDetector"]
position = Vector2( -16, -11 )
shape = SubResource( 40 )

[node name="CollisionLeftBig" type="CollisionShape2D" parent="LeftDetector"]
position = Vector2( -16, -22 )
shape = SubResource( 42 )

[node name="SmallRightDetector" type="Area2D" parent="."]
visible = false
collision_layer = 3
collision_mask = 3

[node name="CollisionSmallRight" type="CollisionShape2D" parent="SmallRightDetector"]
position = Vector2( 12, -14 )
shape = SubResource( 43 )

[node name="CollisionSmallRightBig" type="CollisionShape2D" parent="SmallRightDetector"]
position = Vector2( 12, -23 )
shape = SubResource( 44 )

[node name="SmallLeftDetector" type="Area2D" parent="."]
visible = false
collision_layer = 3
collision_mask = 3

[node name="CollisionSmallLeft" type="CollisionShape2D" parent="SmallLeftDetector"]
position = Vector2( -12, -14 )
shape = SubResource( 45 )

[node name="CollisionSmallLeftBig" type="CollisionShape2D" parent="SmallLeftDetector"]
position = Vector2( -12, -23 )
shape = SubResource( 46 )

[node name="BaseSounds" parent="." instance=ExtResource( 4 )]
